--- a/src/components/experience/Experience.astro
+++ b/src/components/experience/Experience.astro
@@ -1,5 +1,5 @@
 ---
-import { cargarDatos } from "../api/loadData.js";
+import { cargarDatos } from "@api/loadData.js";
 import ExperienceItem from "./ExperienceItem.astro"
 
 // info de experiencia
