--- a/src/components/skills/Skills.astro
+++ b/src/components/skills/Skills.astro
@@ -1,11 +1,11 @@
 ---
-import PythonIcon from './icons/Python.astro';
-import GoIcon from './icons/Go.astro';
-import MongoDDIcon from './icons/MongoDB.astro';
-import MSSQLIcon from './icons/MSSQL.astro';
-import JSIcon from './icons/JS.astro';
+import PythonIcon from '@components/icons/Python.astro';
+import GoIcon from '@components/icons/Go.astro';
+import MongoDDIcon from '@components/icons/MongoDB.astro';
+import MSSQLIcon from '@components/icons/MSSQL.astro';
+import JSIcon from '@components/icons/JS.astro';
 import Skill from './PillSkill.astro';
-import PostgresIcon from './icons/Postgres.astro';
+import PostgresIcon from '@components/icons/Postgres.astro';
 ---
     <div class="flex flex-wrap justify-around">
         <Skill>
