--- a/src/components/education/Education.astro
+++ b/src/components/education/Education.astro
@@ -1,5 +1,5 @@
 ---
-import { cargarDatos } from "../api/loadData.js";
+import { cargarDatos } from "@api/loadData.js";
 import EducationItem from './EducationItem.astro';
 
 // info de estudios
