--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import MainAbout from '@components/about/Main.astro'
 import Skills from '@components/skills/Skills.astro'
 import Experience from '@components/experience/Experience.astro'
 import Projects from '@components/projects/Projects.astro'
-import About from '@components/about/About.astro'
+import About from '@components/about/AboutData.astro'
 import SectionContainer from '@components/SectionContainer.astro'
 import Education from '@components/education/Education.astro'
 import Title from "@components/TitleSection.astro"
