--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ import Title from "@components/TitleSection.astro"
 
 <Layout title="Ronaldo Jiménez">
 	<SectionContainer id="principal">
-		<MainAbout/>
+		<MainAbout server:defer/>
 	</SectionContainer>
 	
 	<SectionContainer id="experiencia">
