--- a/src/components/SocialButton.astro
+++ b/src/components/SocialButton.astro
@@ -1,10 +1,11 @@
 ---
-const { bgColor, borderColor, ...rest } = Astro.props;
+const { href, target = '_blank', rel = 'noopener noreferrer', bgColor, borderColor, ...rest } = Astro.props;
 ---
 <a
+  href={href}
+  target={target}
+  rel={rel}
   {...rest}
-  target="_blank"
-  rel="noopener noreferrer"
   class={`text-xs md:text-sm inline-flex items-center justify-center gap-2 px-4 py-1 md:py-2
     text-sky-950 bg-transparent border rounded-full shadow-md
     hover:shadow-xl hover:scale-105 transition-transform duration-300 cursor-pointer mb-2 
