--- a/src/components/about/Main.astro
+++ b/src/components/about/Main.astro
@@ -1,10 +1,5 @@
 ---
-import SocialButton from '@components/SocialButton.astro';
-import MailIcon from '@components/icons/Mail.astro';
-import YoutubeIcon from '@components/icons/YouTube.astro';
-import GitHubIcon from '@components/icons/GitHub.astro';
-import LinkedInIcon from '@components/icons/LinkedIn.astro';
-import DocumentIcon from '@components/icons/Doc.astro';
+import SocialNetworks from "@components/SocialNetworks.astro";
 ---
 
 <section class="pt-9 md:pt-18 px-4 mt-6 relative max-w-screen-lg mx-auto">
@@ -22,45 +17,24 @@ import DocumentIcon from '@components/icons/Doc.astro';
       />
     </div>
 
-  <h1 class="text-2xl md:text-4xl font-bold text-center px-4">
-    Hola, soy <span class="bg-gradient-to-r from-sky-400 to-sky-600 bg-clip-text text-transparent">Ronaldo Jiménez</span>
-  </h1>
-  
-  <div class="flex flex-col items-center mt-4">
-    <div class="flex items-center gap-2 mb-2">
-      <span class="text-sky-600">●</span>
-      <h3 class="text-xl md:text-2xl font-medium text-gray-700">
-        Software Engineer
-      </h3>
-      <span class="text-sky-400">●</span>
+    <h1 class="text-2xl md:text-4xl font-bold text-center px-4">
+      Hola, soy <span
+        class="bg-gradient-to-r from-sky-400 to-sky-600 bg-clip-text text-transparent"
+        >Ronaldo Jiménez</span
+      >
+    </h1>
+
+    <div class="flex flex-col items-center mt-4">
+      <div class="flex items-center gap-2 mb-2">
+        <span class="text-sky-600">●</span>
+        <h3 class="text-xl md:text-2xl font-medium text-gray-700">
+          Software Engineer
+        </h3>
+        <span class="text-sky-400">●</span>
+      </div>
+
+      <!-- Redes sociales -->
+      <SocialNetworks cvUrl="https://cv.jimcostdev.com"/>
     </div>
-    <!-- Divider -->
-    <div class="border-t border-gray-300/50 w-full md:w-3/4 my-4"></div>
-
-    <!-- Redes sociales -->
-    <div class="flex flex-wrap justify-center gap-2 md:gap-4">
-      <SocialButton href="https://www.linkedin.com/in/ronaldo-jimenez" bgColor="hover:bg-blue-300/10" borderColor="border-blue-300">
-        <LinkedInIcon class="size-5 md:size-6 transition-transform hover:scale-105 duration-300"/>
-      </SocialButton>
-
-      <SocialButton href="https://github.com/JimcostDev" bgColor="hover:bg-gray-400/10" borderColor="border-gray-400">
-        <GitHubIcon class="size-5 md:size-6 transition-transform hover:scale-105 duration-300"/> 
-      </SocialButton>
-
-      <SocialButton href="https://www.youtube.com/@jimcostdev?sub_confirmation=1" bgColor="hover:bg-red-300/10" borderColor="border-red-300">
-        <YoutubeIcon class="size-5 md:size-6 transition-transform hover:scale-105 duration-300"/> 
-      </SocialButton>
-
-      <SocialButton href="mailto:jimcostdev@gmail.com" bgColor="hover:bg-yellow-300/10" borderColor="border-yellow-400">
-        <MailIcon class="size-5 md:size-6 transition-transform hover:scale-105 duration-300"/>
-      </SocialButton>
-
-      <SocialButton href="https://cv.jimcostdev.com/" bgColor="hover:bg-green-300/10" borderColor="border-green-400">
-        <DocumentIcon class="size-5 md:size-6 transition-transform hover:scale-105 duration-300"/>
-      </SocialButton>
-    </div>
-
-    <!-- Divider -->
-    <div class="border-t border-gray-300/50 w-full md:w-3/4 my-4"></div>
   </div>
 </section>
