--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -84,7 +84,7 @@ const ogImage = "https://firebasestorage.googleapis.com/v0/b/jimcostdev-firebase
     <main id="main-content" class="max-w-5xl px-4 m-auto">
       <slot />
     </main>
-    <Footer />
+    <Footer server:defer/>
   </body>
 </html>
 
