--- a/src/components/SocialNetworks.astro
+++ b/src/components/SocialNetworks.astro
@@ -56,7 +56,7 @@ function getConfig(title: string) {
 ---
 
 <!-- Divider superior -->
-<div class="border-t border-gray-300/50 w-full my-4"></div>
+<div class="w-full max-w-xl h-px bg-gradient-to-r from-transparent via-sky-300 to-transparent my-6"></div>
 
 <div class={className}>
   {items.map((net) => {
@@ -77,4 +77,4 @@ function getConfig(title: string) {
 </div>
 
 <!-- Divider inferior -->
-<div class="border-t border-gray-300/50 w-full my-4"></div>
+<div class="w-full max-w-xl h-px bg-gradient-to-r from-transparent via-sky-300 to-transparent my-6"></div>
