--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -37,7 +37,7 @@ import Title from "@components/TitleSection.astro"
 
 	<SectionContainer id="skills">
 		<Title>Skills</Title>
-		<Skills/>
+		<Skills server:defer/>
 	</SectionContainer>
 </Layout>
 
